[gd_scene load_steps=5 format=3 uid="uid://cfppi3nrdy77"]

[ext_resource type="Theme" uid="uid://qkvjcwtwjvf7" path="res://nodes/ui/menu_theme.tres" id="1_tdyvv"]
[ext_resource type="Script" path="res://nodes/ui/menu_rules/menu_rules.gd" id="2_8nuvx"]
[ext_resource type="FontFile" uid="uid://dshnsx4ueiv2b" path="res://fonts/ttfs/LBRITE.TTF" id="3_ppqw7"]

[sub_resource type="LabelSettings" id="LabelSettings_uw34r"]
font = ExtResource("3_ppqw7")
font_size = 64

[node name="MenuChangeRules" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tdyvv")
script = ExtResource("2_8nuvx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.203922, 0.360784, 0.321569, 0.207843)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="hboxSeed" type="HBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="seedLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxSeed"]
layout_mode = 2
theme = ExtResource("1_tdyvv")
text = "Seed: "
label_settings = SubResource("LabelSettings_uw34r")

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxSeed"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_tdyvv")
placeholder_text = "<random>"
alignment = 1

[node name="randomSeedButton" type="Button" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxSeed"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("1_tdyvv")
theme_override_font_sizes/font_size = 128
toggle_mode = true
button_pressed = true
text = "âŽ‡"

[node name="hboxCourtSize" type="HBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="labelCourtSize" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxCourtSize"]
visible = false
layout_mode = 2
theme = ExtResource("1_tdyvv")
text = "Size: "
label_settings = SubResource("LabelSettings_uw34r")

[node name="spinnerCourtSize" type="SpinBox" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxCourtSize"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 4.0
step = 2.0
value = 4.0
alignment = 1
update_on_text_changed = true
suffix = "players per court"

[node name="hboxCourtsAvailable" type="HBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="labelCourtsAvailable" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxCourtsAvailable"]
visible = false
layout_mode = 2
theme = ExtResource("1_tdyvv")
text = "Seed: "
label_settings = SubResource("LabelSettings_uw34r")

[node name="spinnerCourtsAvailable" type="SpinBox" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/hboxCourtsAvailable"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 4.0
alignment = 1
suffix = "courts available"
